--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.11)
-project(dos-app)
+project(dosgame)
 
 set(CMAKE_GENERATOR Ninja)
 set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)
@@ -7,7 +7,13 @@ add_compile_options(-Wall -save-temps)
 
 file(GLOB sources CONFIGURE_DEPENDS "src/*.c" "src/*.cpp" "src/*.h" "src/**/*.c" "src/**/*.cpp" "src/**/*.h" )
 
-add_executable(main ${sources})
+if(MSVC)
+    add_executable(main WIN32 ${sources})
+    add_compile_definitions(ALLEGRO_MSVC)
+else()
+    add_executable(main ${sources})
+    add_compile_definitions(ALLEGRO_DJGPP)
+endif()
 
 add_custom_target(assets
     COMMAND ${CMAKE_COMMAND} -E copy_directory
@@ -17,6 +23,10 @@ add_custom_target(assets
 
 target_include_directories(main PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
-target_link_libraries(main PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/lib/liballeg.a)
+if(WIN32)
+    target_link_libraries(main PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/lib/alleg.lib)
+else()
+    target_link_libraries(main PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/lib/liballeg.a)
+endif()
 
 add_dependencies(main assets)
